2005-09-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/awt/peer/qt/QtGraphics.java:
	(getRenderingHints()): Create a clone as no such
	constructor exists with generic typing.
	(setRenderingHints(Map<?,?>)): Added parametric typing
	and fixed use of RenderingHints constructor.
	* java/awt/AWTEventMulticaster.java:
	(getListeners(EventListener,Class<T>)): Added generic
	typing.
	* java/awt/Component.java:
	(getListeners(Class<T>)): Likewise.
	(getFocusTraversalKeys(int)): Likewise.
	* java/awt/Font.java:
	(Font(Map<? extends Attribute,?>)): Likewise.
	(deriveFont(Map<? extends Attribute,?>)): Likewise.
	(getAttributes()): Likewise.
	(getAvailableAttributes()): Simplified naming with static import.
	(getFont(Map<? extends Attribute,?>)): Added generic typing.
	* java/awt/Graphics2D.java:
	(setRenderingHints(Map<?,?>)): Likewise.
	(addRenderingHints(Map<?,?>)): Likewise.
	* java/awt/KeyboardFocusManager.java:
	(setDefaultFocusTraversalKeys(int,Set<? extends KeyStroke>)):
	Likewise.
	(getKeyEventDispatchers()): Likewise.
	(getKeyEventPostProcessors()): Likewise.
	* java/awt/MenuItem.java:
	(getListeners(Class<T>)): Likewise.
	* java/awt/RenderingHints.java:
	(RenderingHints(Map<Key,?>)): Likewise.
	(putAll(Map<?,?>)): Likewise.
	(keySet()): Likewise.
	(values()): Likewise.
	(entrySet()): Likewise.
	* java/awt/Toolkit.java:
	(desktopProperties): Likewise.
	(createDragGestureRecognizer(Class<T>,DragSource,Component,int,
	DragGestureListener)): Likewise.
	(mapInputMethodHighlight(InputMethodHighlight)): Likewise.
	* java/lang/Class.java:
	(getDeclaringClass()): Likewise.
	* java/lang/Enum.java:
	(valueOf(Class<S>,String)): Fixed return type.
	* java/lang/SecurityManager.java:
	(checkMemberAccess(Class<?>,int)): Likewise.
	* java/lang/reflect/Array.java:
	(newInstance(Class<?>,int)): Likewise.
	(newInstance(Class<?>,int[])): Likewise.
	* vm/reference/java/lang/reflect/Constructor.java:
	(getTypeParameters()): Type parameter changed from ? to Constructor.