@@ -1,3 +1,11 @@
+2005-09-30  Jeroen Frijters  <jeroen@frijters.net>
+
+	* gnu/java/lang/reflect/FieldSignatureParser.java: New file.
+	* gnu/java/lang/reflect/ClassSignatureParser.java,
+	gnu/java/lang/reflect/GenericSignatureParser.java,
+	gnu/java/lang/reflect/MethodSignatureParser.java:
+	Finished implementation.
+
 2005-09-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* gnu/java/awt/peer/qt/QtGraphics.java:
